--- a/manager/swarm.conf.jinja
+++ b/manager/swarm.conf.jinja
@@ -1,12 +1,12 @@
 # vim: ft=sls
 
 mine_functions:
-  manager_token:
+  docker.manager_token:
     - mine_function: cmd.run
     - 'docker swarm join-token manager -q'
-  manager_ip:
+  docker.manager_ip:
     - mine_function: network.ip_addrs
-    - {{ salt.pillar.get('docker:swarm:interface', 'eth0') }}
-  worker_token:
+    - {{ swarm_interface }}
+  docker.worker_token:
     - mine_function: cmd.run
     - 'docker swarm join-token worker -q'
